[CacheStorage] Disabled cached size DCHECK.

The cache size, saved in the index file, was getting out-of-sync with
the actual cache size. A speculative fix was landed in crrev.com/2613183003
but even if this fixed the problem, this DCHECK would still fail
with no obvious resolution. Disabling this DCHECK - at least temporarily.

BUG=681900

Review-Url: https://codereview.chromium.org/2635313002
Cr-Commit-Position: refs/heads/master@{#444122}

Former-commit-id: 9964f41926c6d9d18a9fbf338d4f8acb3d1825a2